fix crash and visibility of edit bar in 2009 banners #7107

--- a/resources/gato-template-txstate2009/css/banner.scss
+++ b/resources/gato-template-txstate2009/css/banner.scss
@@ -141,7 +141,7 @@
 
 .gato-banners-admin {
   position: absolute;
-  top: 10px;
+  top: 7px;
   left: 0px;
   width: 550px;
 }
